Bug 260284 - Creating a new event does not preset the correct date
Summary: Creating a new event does not preset the correct date
Status: VERIFIED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: calendar (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-16 16:23 UTC by Björn Balazs
Modified: 2011-02-15 16:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (14.94 KB, image/png)
2010-12-16 16:23 UTC, Björn Balazs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Balazs 2010-12-16 16:23:18 UTC
Created attachment 54825 [details]
screenshot

Version:           unspecified (using Devel) 
OS:                Windows CE

When you create "new event" from (single / multiple) folder view, the new event does not set the date to the date the user sets in the timebox above (s. screenshot)

Reproducible: Didn't try
Comment 1 Tobias Koenig 2010-12-20 10:52:21 UTC
SVN commit 1208010 by tokoe:

Preselect the date for new events

BUG: 260284


 M  +1 -1      korganizer-mobile.qml  
 M  +11 -0     mainview.cpp  
 M  +1 -0      mainview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1208010