Preselect the date for new events

BUG: 260284

svn path=/trunk/KDE/kdepim/mobile/; revision=1208010